--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   max-height: 100vh;
 }
 
+#main-container {
+  display: flex;
+}
+
 #grid-container {
   display: flex;
   flex-flow: row wrap;
