--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,12 @@ body {
 .square {
   aspect-ratio: 1/1;
   flex: 1 1 auto;
-  border: 2px solid rgba(136, 136, 136, 0.24);
+  border: 2px solid #eee;
   background-color: #eee;
 }
 
 .hovered {
-  background-color: rgb(44, 44, 44);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .break {
