--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,26 @@ html,
 body {
   background-color: thistle;
   max-height: 100vh;
+  font-family: Roboto, sans-serif;
 }
-
+#title {
+  text-align: center;
+  padding: 2rem;
+}
 #main-container {
   display: flex;
+  justify-content: center;
+}
+
+#controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+}
+
+#generate-grid {
+  padding: 0.275rem;
 }
 
 #grid-container {
@@ -31,6 +47,7 @@ body {
 }
 
 .hovered {
+  cursor: crosshair;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
